---------------------------------------------------------------------------------------------------
Version: 4.1.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 4.1.2
Date: 2020-04-21
  Changes:
    - Moved groups and subgroups option to Picker Inventory Tools.
    - Moved Flashlight Toggle to Picker Inventory Tools.
    - Moved Minimap Toggle to Picker Inventory Tools.
    - Ore erasers now uses Entity.deplete().
---------------------------------------------------------------------------------------------------
Version: 4.1.1
Date: 2020-03-19
  Changes:
    - Removed helmod pin panel as it isn't needed anymore.
  Features:
    - Allow toggling of the minimap with [CTRL + SHIFT + M].
  Bugfixes:
    - Remove Entity.character_logistic_slot_count_bonus.
---------------------------------------------------------------------------------------------------
Version: 4.1.0
Date: ??????
  Features:
    - Update to Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 4.0.10
Date: ??????
  Bugfixes:
    - Ghost reviver should behave better with pipe underneathies.
  Features:
    - Crafter can craft even if you have items.
    - Crafter works with cursor ghosts.
---------------------------------------------------------------------------------------------------
Version: 4.0.9
Date: ??????
  Bugfixes:
    - Ghost reviver should behave better with underneathies.
    - Ghost reviver ignores rail-planner placed entities.
---------------------------------------------------------------------------------------------------
Version: 4.0.8
Date: ??????
  Bugfixes:
    - Properly close the quick planner menu.
  Changes:
    - Move held item editor to PickerInventoryTools.
    - Remove deprecated 'picker' interface.
    - Move zapper to PickerInventoryTools.