@@ -69,7 +69,7 @@ local function pick_wires(event)
         for _, wire_name in ipairs(wire_types) do
             local wire = lib.get_item_stack(player, wire_name)
             if wire then
-                return player.clean_cursor() and stack.swap_stack(wire)
+                return player.clear_cursor() and stack.swap_stack(wire)
             end
         end
         player.print({'wiretool.no-wires-found'})
@@ -88,11 +88,11 @@ local function pick_wires(event)
                 index = index < #wire_types and index + 1 or 1
                 local wire = lib.get_item_stack(player, wire_types[index])
                 if wire then
-                    return player.clean_cursor() and stack.swap_stack(wire)
+                    return player.clear_cursor() and stack.swap_stack(wire)
                 end
             until index == start
             player.print({'wiretool.no-wires-found'})
-            player.clean_cursor()
+            player.clear_cursor()
         end
     end
 end
