@@ -2,6 +2,7 @@
 Version: 4.1.3
 Date: ????
   Changes:
+    - clean_cursor renamed to clear_cursor.
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.2
 Date: 2020-04-21
